test/visibility/rename/affectsDeeper.good
affectsDeeper.chpl:19: In function 'main':
affectsDeeper.chpl:20: error: 'bar' undeclared (first use this function)
